fixed bugs.... option bugs, and added default options.

--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@
 
 * escape \" and \' in options?
 * extract rack-cluster
+* detect binding to port succeeded or not
+* fix default options for rack-cluster
