--- a/README
+++ b/README
@@ -15,6 +15,9 @@ by Lin Jen-Shin (a.k.a. godfat-真常[http://godfat.org])
 
 $ rake -T app
 (in /home/photos)
+rake app:daemon:restart[config]     # restart the daemon cluster
+rake app:daemon:start[config]       # start the daemon cluster
+rake app:daemon:stop[config]        # stop the daemon cluster
 rake app:deploy                     # deploy to master state
 rake app:deploy:after               # after deploy hook for you to override
 rake app:deploy:before              # before deploy hook for you to override
@@ -25,7 +28,7 @@ rake app:git[cmd]                   # generic git cmd walk through all dependenc
 rake app:git:clone                  # clone repoitory from github
 rake app:git:gc                     # git gc
 rake app:git:pull                   # pull anything from origin
-rake app:git:reset[reset_all]       # make anything reflect master state
+rake app:git:stash                  # make anything reflect master state
 rake app:install                    # install this application
 rake app:install:after              # after install hook for you to override
 rake app:install:before             # before install hook for you to override
