[README] we need ruby 1.8.7+, no more 1.8.6 please.

--- a/README
+++ b/README
@@ -67,6 +67,7 @@ rake app:thin:stop[config]                          # stop the thin cluster
 
 == REQUIREMENTS:
 
+* ruby 1.8.7+
 * [required] rake
 * [optional] rubygems for rubygems task
 * [optional] git      for git      task
